Create test general case